# ashigaru

./: .gitignore  Cargo.toml  README.md  ashigaru.service
src/: app.rs  config.rs  context.rs  domain.rs  infra.rs  main.rs
src/app/: event_service.rs  order_service.rs
src/domain/: config.rs  event.rs  order.rs
src/infra/: config.rs  event.rs  order.rs  rest.rs  shell.rs
static/: index.html  script.js  style.css
