[package]
name = "ashigaru"
version = "0.1.0"
authors = ["prokosna <prokosna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
actix-web = "3.3.2"
chrono = {version="0.4.19", features=["serde"]}
serde = "1.0.118"
serde_json = "1.0.61"
uuid = {version = "0.8.1", features=["serde", "v4"]}
envy = "0.4.2"
actix-files = "0.5.0"
paho-mqtt = "0.9.1"
dotenv = "0.15.0"
reqwest = {version="0.11.0", features=["blocking", "json"]}
env_logger = "0.8.2"
log = "0.4.11"
